--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2376,62 +2376,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1922,)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "action_idx = 3994"
+    "action_idx = 3995"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(e,a) = (action_idx//42 + 1, action_idx%42 + 1)"
+    "def action2elec_amp(action_idx, n_amps):\n",
+    "    # convert action_idx to (elec, amp)\n",
+    "    (elec, amp) = (action_idx//n_amps + 1, action_idx%n_amps + 1)\n",
+    "    return (elec, amp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = np.where((sim.elecs == e) & (sim.amps == a))[0][0]"
+    "def load_dictionary(path):\n",
+    "    # Load relevant data from .npz files\n",
+    "    try:\n",
+    "        with np.load(os.path.join(path,\"dictionary.npz\")) as data:\n",
+    "            dict = data[\"dictionary\"]\n",
+    "            elecs = data[\"entry_elecs\"]\n",
+    "            amps = data[\"entry_amps\"]\n",
+    "            elec_map = data[\"elec_map\"]\n",
+    "        with np.load(os.path.join(path,\"decoders.npz\")) as data:\n",
+    "            cell_ids = data[\"cell_ids\"]\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Please make sure the dictionary.npz and decoders.npz files are present in the specified path\")\n",
+    "\n",
+    "    return dict, elecs, amps, elec_map, cell_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dict_from_action_idx(action_idx, n_amps, path):\n",
+    "    # convert action_idx to (elec, amp)\n",
+    "    (elec, amp) = action2elec_amp(action_idx, n_amps)\n",
+    "    \n",
+    "    dict, elecs, amps, elec_map, cell_ids = load_dictionary(path)\n",
+    "\n",
+    "    # get dictionary entry\n",
+    "    try:\n",
+    "        idx = np.where((elecs == elec) & (amps == amp))[0][0]\n",
+    "        dict_entry = dict[idx]\n",
+    "    except IndexError:\n",
+    "        print(f\"Electrode {elec} with amplitude {amp} was not in the dictionary\")\n",
+    "        print(f\"Assume no cells were activated\")\n",
+    "        dict_entry = np.zeros(len(cell_ids), dtype=np.float64)\n",
+    "\n",
+    "    return dict_entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       1.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.05, 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.1 , 0.  , 0.  , 0.  ,\n",
+       "       1.  , 0.  , 0.  , 0.  , 0.  , 0.05, 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
+       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.05, 0.  ,\n",
+       "       0.  , 0.05, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.1 , 0.  , 0.  , 0.  , 0.05, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
+       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.05, 0.  , 0.  ,\n",
+       "       0.05, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
        "       0.  , 0.  , 0.  , 0.  ])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sim.dict[idx]"
+    "get_dict_from_action_idx(action_idx, sim.n_amps, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_dict = []\n",
+    "for a in np.nonzero(Q_value)[0]:\n",
+    "    new_dict.append(get_dict_from_action_idx(a, sim.n_amps, path))\n",
+    "new_dict = np.array(new_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1922, 147)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dict.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "109"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "span_score_func(new_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict = load_dictionary(path)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4702, 147)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mag_cosine_sim_score_func(vectors):\n",
+    "    score = 0.0\n",
+    "    _, dim = vectors.shape\n",
+    "    # calculate the magnitude of each vector\n",
+    "    mag = np.linalg.norm(vectors, axis=1)\n",
+    "\n",
+    "    # calculate the magnitude difference between each vector and unit vector\n",
+    "    abs_mag_diff = np.abs(mag - 1)\n",
+    "\n",
+    "    # calculate the cosine similarity between each vector and unit vector\n",
+    "    for d in range(dim):\n",
+    "        unit_vec = np.zeros(dim)\n",
+    "        unit_vec[d] = 1\n",
+    "        cos_sim = np.dot(vectors, unit_vec) / mag\n",
+    "        score += np.max(cos_sim)-abs_mag_diff[np.argmax(cos_sim)]\n",
+    "\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectors = np.array([[1,0,0],[0,0.1,0],[0,0,1]])\n",
+    "score = mag_cosine_sim_score_func(vectors)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hoge = np.zeros(5)\n",
+    "hoge[0]=1\n",
+    "np.linalg.norm(hoge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0062305898749053"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(np.array([0.1,0.05,0,0,0,1]))"
    ]
   },
   {
