--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -58,24 +58,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33"
+       "dtype('float64')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = np.array([1, 2, 3, 1])\n",
-    "B = np.array([4, 5, 6, 1])\n",
-    "np.dot(A, B)"
+    "np.zeros((3, 4)).dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([60001,   502,   603,     6], dtype=uint16)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([0.1, 0.2, 0.3, 0.4], dtype=np.float64)\n",
+    "B = np.array([60000, 500, 600, 2], dtype=np.uint16)\n",
+    "C = np.array([1, 2, 3, 4], dtype=np.uint8)\n",
+    "np.dot(A, B)\n",
+    "B+C"
    ]
   },
   {
